change author and categories layout

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,16 +1,28 @@
 # Sample Authors
 # Remove file or replace with your own
 
-Billy Rick:
-  name: Billy Rick
-  picture: /images/bio-photo-2.jpg
-  twitter: "@billyrick"
-  links:
-    - title: Twitter
-      url: https://twitter.com/billyrick
-      icon: fab fa-twitter-square
+# Billy Rick:
+#   name: Billy Rick
+#   picture: /images/bio-photo-2.jpg
+#   twitter: "@billyrick"
+#   links:
+#     - title: Twitter
+#       url: https://twitter.com/billyrick
+#       icon: fab fa-twitter-square
 
-Cornelius Fiddlebone:
-  name: Cornelius Fiddlebone
-  picture: /images/bio-photo.jpg
-  twitter: corneliusfiddlebone
+# Cornelius Fiddlebone:
+#   name: Cornelius Fiddlebone
+#   picture: /images/bio-photo.jpg
+#   twitter: corneliusfiddlebone
+
+
+Keye Zhu:
+  picture: /images/bio-photo-Keye-small.jpg
+  links:
+    - title: LinkedIn
+      url: https://www.linkedin.com/in/keyezhu/  # 替换为真实的 LinkedIn 链接
+      icon: fab fa-linkedin
+    - title: GitHub
+      url: https://github.com/keye25  # 替换为真实的 GitHub 链接
+      icon: fab fa-github-square
+
