--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,7 +4,7 @@
   url: /
 #- title: Posts
 #  url: /posts/
-- title: Project   #原来是：Categories
+- title: My Project   #原来是：Categories
   url: /categories/
 #- title: Tags
 #  url: /tags/
@@ -12,5 +12,5 @@
 #  url: /recipes/
 - title: Search
   url: /search/
-#- title: External Page
-#  url: https://the-page.com/you-want-to-link-to.html
+- title: linkedin
+  url: https://www.linkedin.com/in/keyezhu/
