change config author

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -17,7 +17,7 @@
 
 
 Keye Zhu:
-  picture: /images/bio-photo-Keye-small.jpg
+  picture: "/images/keye-photo1.jpg"
   links:
     - title: LinkedIn
       url: https://www.linkedin.com/in/keyezhu/  # 替换为真实的 LinkedIn 链接
