--- a/_config.yml
+++ b/_config.yml
@@ -17,11 +17,11 @@ theme: jekyll-theme-so-simple
 # remote_theme: mmistakes/so-simple-theme
 skin: "/assets/css/skins/default.css"
 locale: en-US
-title: "My Awesome Site"
-description: "It really is the best."
+title: "Keye Zhu"
+description: "Building Tomorrow with Product Strategy and Data Insights."
 baseurl: # the subpath of your site, e.g. "/blog"
 url: # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
-logo: # path of site logo, e.g. "/images/logo.png"
+logo: "/images/logo.png" # path of site logo, e.g. "/images/logo.png"
 date_format: "%B %-d, %Y"
 read_time: # reading time estimates, e.g. true
 words_per_minute: # 200
@@ -91,14 +91,24 @@ defaults:
 
 # Site Author
 author:
-  name:
-  picture:
-  email:
+  name: Keye Zhu
+  picture: "/images/keye-photo2.jpg"
+  email: 
   twitter:
+  # links:
+  #   - title:
+  #     url:
+  #     icon:
   links:
-    - title:
-      url:
-      icon:
+    - title: LinkedIn
+      url: https://www.linkedin.com/in/keyezhu/  # 替换为真实的 LinkedIn 链接
+      icon: fab fa-linkedin
+    - title: GitHub
+      url: https://github.com/keye25  # 替换为真实的 GitHub 链接
+      icon: fab fa-github-square
+
+
+
 
 # Footer Links
 footer_links:
