--- a/_config.yml
+++ b/_config.yml
@@ -19,8 +19,8 @@ skin: "/assets/css/skins/default.css"
 locale: en-US
 title: "Keye Zhu"
 description: "Building Tomorrow with Product Strategy and Data Insights."
-baseurl: # the subpath of your site, e.g. "/blog"
-url: # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+baseurl: "/keye-site" # the subpath of your site, e.g. "/blog"
+url: "https://keye25.github.io"  # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 logo: "keye-photo1.jpg" # path of site logo, e.g. "/images/logo.png"
 date_format: "%B %-d, %Y"
 read_time: # reading time estimates, e.g. true
